packages/frontend/styles/components/Borrow.module.css
.maxBtn {
  background: rgb(236, 38, 104, 0.2);
  /* #EC2668 with opacity */
  color: #ec2668;
  height: 1.25rem;
  padding: 0.188rem 0.188rem;
  text-transform: uppercase;
  border-radius: 0.5rem;
  line-height: 0.938rem;
  margin-right: 0.4rem;
  cursor: pointer;
}

.maxBtn:hover {
  background: rgb(236, 38, 104, 0.3);
  text-shadow: #ec2668 0rem 0rem 0.125rem;
  color: #ec2668;
}

.cardLine {
  display: flex;
  width: 100%;
  justify-content: space-between;
  flex-wrap: wrap;
  align-items: center;
}

.selectLabel {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 160%;
  opacity: 0.5;
  margin-right: 0.5rem;
}

.btn {
  padding: 0.75rem 1.25rem;
  text-transform: none;
  font-size: 1rem;
}

